[package]
name = "todo-list"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sea-orm = { version = "0.10", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.7"
